--- a/index.html
+++ b/index.html
@@ -13,170 +13,204 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
     <header class="header">
-      <a href="./index.html" class="logo link"><span class="logo-clr">Web</span>Studio</a>
-      <nav class="nav">
-        <ul class="nav-list list">
-          <li class="nav-list-item">
-            <a href="./index.html" class="nav-list-link link active">Студия</a>
+      <div class="container">
+        <a href="./index.html" class="logo link"><span class="logo-clr">Web</span>Studio</a>
+        <nav class="nav">
+          <ul class="nav-list list">
+            <li class="nav-list-item">
+              <a href="./index.html" class="nav-list-link link active">Студия</a>
+            </li>
+            <li class="nav-list-item">
+              <a href="./portfolio.html" class="nav-list-link link">Портфолио</a>
+            </li>
+            <li class="nav-list-item"><a href="" class="nav-list-link link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="contact-list list">
+          <li class="contact-list-item">
+            <a href="mailto:info@devstudio.com" class="contact-list-link link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="nav-list-item">
-            <a href="./portfolio.html" class="nav-list-link link">Портфолио</a>
+          <li class="contact-list-item">
+            <a href="tel:+380961111111" class="contact-list-link link">+38 096 111 11 11</a>
           </li>
-          <li class="nav-list-item"><a href="" class="nav-list-link link">Контакты</a></li>
         </ul>
-      </nav>
-      <ul class="contact-list list">
-        <li class="contact-list-item">
-          <a href="mailto:info@devstudio.com" class="contact-list-link link">info@devstudio.com</a>
-        </li>
-        <li class="contact-list-item">
-          <a href="tel:+380961111111" class="contact-list-link link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <!-- Main -->
     <main>
       <!-- Hero section -->
       <section class="hero-section">
-        <h1 class="hero-title">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-        <button type="button" class="hero-btn">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button type="button" class="hero-btn">Заказать услугу</button>
+        </div>
       </section>
       <!-- Feature section -->
       <section class="feature-section">
-        <h2 hidden>Особенности</h2>
-        <ul class="feature-list list">
-          <li class="feature-list-item">
-            <h3 class="feature-list-title">Внимание к деталям</h3>
-            <p class="feature-list-txt">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li class="feature-list-item">
-            <h3 class="feature-list-title">Пунктуальность</h3>
-            <p class="feature-list-txt">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="feature-list-item">
-            <h3 class="feature-list-title">Планирование</h3>
-            <p class="feature-list-txt">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="feature-list-item">
-            <h3 class="feature-list-title">Современные технологии</h3>
-            <p class="feature-list-txt">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>Особенности</h2>
+          <ul class="feature-list card-set list">
+            <li class="feature-list-item card-set-item">
+              <h3 class="feature-list-title">Внимание к деталям</h3>
+              <p class="feature-list-txt">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="feature-list-item card-set-item">
+              <h3 class="feature-list-title">Пунктуальность</h3>
+              <p class="feature-list-txt">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="feature-list-item card-set-item">
+              <h3 class="feature-list-title">Планирование</h3>
+              <p class="feature-list-txt">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="feature-list-item card-set-item">
+              <h3 class="feature-list-title">Современные технологии</h3>
+              <p class="feature-list-txt">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Engage section -->
-      <section class="engage-section">
-        <h2 class="engage-title">Чем мы занимаемся</h2>
-        <ul class="engage-list list">
-          <li class="engage-list-item">
-            <img
-              src="./images/engage/engage-img-1.jpg"
-              alt="Работник пишет код на клавиатуре"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="engage-list-item">
-            <img
-              src="./images/engage/engage-img-2.jpg"
-              alt="Работник рисует на планшете"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="engage-list-item">
-            <img
-              src="./images/engage/engage-img-3.jpg"
-              alt="Работник проверяет телефон"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+      <section class="engage-section section">
+        <div class="container">
+          <h2 class="engage-title">Чем мы занимаемся</h2>
+          <ul class="engage-list card-set list">
+            <li class="engage-list-item card-set-item">
+              <img
+                src="./images/engage/engage-img-1.jpg"
+                alt="Работник пишет код на клавиатуре"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="engage-list-item card-set-item">
+              <img
+                src="./images/engage/engage-img-2.jpg"
+                alt="Работник рисует на планшете"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="engage-list-item card-set-item">
+              <img
+                src="./images/engage/engage-img-3.jpg"
+                alt="Работник проверяет телефон"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Team section -->
-      <section class="team-section">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="team-list-item">
-            <img src="./images/team/team-img-1.jpg" alt="Работник Игорь" width="270" height="260" />
-            <h3 class="team-list-title">Игорь Демьяненко</h3>
-            <p lang="en" class="team-list-txt">Product Designer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/team/team-img-2.jpg"
-              alt="Работница Ольга"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-list-title">Ольга Репина</h3>
-            <p lang="en" class="team-list-txt">Frontend Developer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/team/team-img-3.jpg"
-              alt="Работник Николай"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-list-title">Николай Тарасов</h3>
-            <p lang="en" class="team-list-txt">Marketing</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/team/team-img-4.jpg"
-              alt="Работник Михаил"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-list-title">Михаил Ермаков</h3>
-            <p lang="en" class="team-list-txt">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team-section section">
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list card-set list">
+            <li class="team-list-item card-set-item">
+              <img
+                src="./images/team/team-img-1.jpg"
+                alt="Работник Игорь"
+                width="270"
+                height="260"
+              />
+              <div class="team-list-content">
+                <h3 class="team-list-title">Игорь Демьяненко</h3>
+                <p lang="en" class="team-list-txt">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-list-item card-set-item">
+              <img
+                src="./images/team/team-img-2.jpg"
+                alt="Работница Ольга"
+                width="270"
+                height="260"
+              />
+              <div class="team-list-content">
+                <h3 class="team-list-title">Ольга Репина</h3>
+                <p lang="en" class="team-list-txt">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-list-item card-set-item">
+              <img
+                src="./images/team/team-img-3.jpg"
+                alt="Работник Николай"
+                width="270"
+                height="260"
+              />
+              <div class="team-list-content">
+                <h3 class="team-list-title">Николай Тарасов</h3>
+                <p lang="en" class="team-list-txt">Marketing</p>
+              </div>
+            </li>
+            <li class="team-list-item card-set-item">
+              <img
+                src="./images/team/team-img-4.jpg"
+                alt="Работник Михаил"
+                width="270"
+                height="260"
+              />
+              <div class="team-list-content">
+                <h3 class="team-list-title">Михаил Ермаков</h3>
+                <p lang="en" class="team-list-txt">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo-light logo link"
-        ><span class="logo-clr">Web</span>Studio</a
-      >
-      <address class="address">
-        <ul class="address-list list">
-          <li class="address-list-item street">
-            <a
-              href="https://goo.gl/maps/L4N7FVB9bXjK6bW5A"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="address-list-link link"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="address-list-item">
-            <a href="mailto:info@devstudio.com" class="address-list-link link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-list-item">
-            <a href="tel:+380961111111" class="address-list-link link">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo-light logo link"
+          ><span class="logo-clr">Web</span>Studio</a
+        >
+        <address class="address">
+          <ul class="address-list list">
+            <li class="address-list-item street">
+              <a
+                href="https://goo.gl/maps/L4N7FVB9bXjK6bW5A"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="address-list-link link"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="address-list-item">
+              <a href="mailto:info@devstudio.com" class="address-list-link link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-list-item">
+              <a href="tel:+380961111111" class="address-list-link link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
