--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- Feature section -->
       <section class="feature-section">
         <div class="container">
-          <h2 hidden>Особенности</h2>
+          <h2 class="visually-hidden">Особенности</h2>
           <ul class="feature-list card-set list">
             <li class="feature-list-item card-set-item">
               <h3 class="feature-list-title">Внимание к деталям</h3>
