--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
     <main>
       <section class="portfolio-section section">
         <div class="container">
-          <h1 hidden>Портфолио</h1>
+          <h1 class="visually-hidden">Портфолио</h1>
           <ul class="portfolio-list list">
             <li class="portfolio-list-item">
               <button type="button" class="portfolio-list-btn">Все</button>
